--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="background:#f7f7f7;">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Chorus</title>
